--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	<div class="container">
+    <h1>Login Form</h1>
+    <form id="loginForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" placeholder="Username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" placeholder="Password" required>
+
+        <label>
+            <input type="checkbox" id="checkbox"> Remember me
+        </label>
+
+        <input type="submit" id="submit" value="Submit">
+    </form>
+
+    <button id="existing" style="display:none;">Login as existing user</button>
+</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
