--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" placeholder="Password" required>
 
-        <label>
+        <label for="checkbox">
             <input type="checkbox" id="checkbox"> Remember me
         </label>
 
